fix(card): remove overflow hidden

--- a/src/card/card.css
+++ b/src/card/card.css
@@ -11,7 +11,6 @@
   border-radius: var(--bl-card-border-radius);
   border: var(--bl-card-border);
   display: block;
-  overflow: hidden;
 }
 
 .card-image {
